--- a/.github/workflows/gradle-test-fast-experimental.yml
+++ b/.github/workflows/gradle-test-fast-experimental.yml
@@ -1,11 +1,7 @@
 name: Gradle test (fast)
 
 on:
-  workflow_dispatch:
-  push:
-    branches:
-      - develop
-  pull_request:
+  workflow_dispatch
 
 permissions:
   checks: write
