--- a/.github/workflows/gradle-test-fast-experimental.yml
+++ b/.github/workflows/gradle-test-fast-experimental.yml
@@ -9,7 +9,7 @@ permissions:
 
 jobs:
   atlas:
-    uses: .github/workflows/gradle-test.yml@develop
+    uses: gradle-test.yml@develop
     with:
       subproject: 'ihmc-robotics-toolkit'
       test-category: 'fast'
