--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -121,8 +121,5 @@ jobs:
 
       - name: Display Test Report XML
         if: success() || failure() # Spustí se vždy, nezávisle na výsledku předchozích kroků
-        run: |
-          for file in $(find build/test-results/test -name 'TEST-*.xml'); do
-            echo "Displaying $file:"
-            cat "$file"
-          done
+        run: ls '**/build/test-results/test/'
+          
