--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -121,5 +121,7 @@ jobs:
 
       - name: Display Test Report XML
         if: success() || failure() # Spustí se vždy, nezávisle na výsledku předchozích kroků
-        run: ls './${{ github.event.repository.name }}/build/test-results/test/'
+        run: |
+          ls './${{ inputs.subproject }}/'
+          ls './${{ inputs.subproject }}/build/test-results/test/'
           
