--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -119,9 +119,21 @@ jobs:
           detailed_summary: true
           check_name: JUnit Test Report ${{ inputs.subproject || ''}}
 
-      - name: Display Test Report XML
+      - name: Send JUNIT XML Files to Evergreen API
         if: success() || failure() # Spustí se vždy, nezávisle na výsledku předchozích kroků
         run: |
           echo "Workflow Run ID: ${{ github.run_id }}"
-          cd repository-group/${{ github.event.repository.name }}/${{ inputs.subproject }}/src/test/build/test-results/test/
-          ls TEST-*.xml         
+          cd repository-group/${{ github.event.repository.name }}/${{ inputs.subproject }}/src/test/build/test-results/test/    
+          for file in TEST-*.xml; do
+            # Zkontroluj, zda soubor existuje
+            if [ -f "$file" ]; then
+              echo "Sending $file to API"
+              # Odeslání souboru na API pomocí POST requestu s hlavičkou WorkflowRunID
+              curl -X POST \
+                -H "WorkflowRunID: ${{ github.run_id }}" \
+                -F "file=@$file" \
+                http://evergreen66/api/junitupload.php
+            else
+              echo "No XML files found matching TEST-*.xml"
+            fi
+          done        
