--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -120,20 +120,7 @@ jobs:
           check_name: JUnit Test Report ${{ inputs.subproject || ''}}
 
       - name: Send JUNIT XML Files to Evergreen API
-        if: success() || failure() # Spustí se vždy, nezávisle na výsledku předchozích kroků
-        run: |
-          echo "Workflow Run ID: ${{ github.run_id }}"
-          cd repository-group/${{ github.event.repository.name }}/${{ inputs.subproject }}/src/test/build/test-results/test/    
-          for file in TEST-*.xml; do
-            # Zkontroluj, zda soubor existuje
-            if [ -f "$file" ]; then
-              echo "Sending $file to API"
-              # Odeslání souboru na API pomocí POST requestu s hlavičkou WorkflowRunID
-              curl -X POST \
-                -H "WorkflowRunID: ${{ github.run_id }}" \
-                -F "file=@$file" \
-                http://evergreen66/api/junitupload.php
-            else
-              echo "No XML files found matching TEST-*.xml"
-            fi
-          done        
+        uses: ./.github/actions/send-junit-to-api
+        with:
+          subproject: ${{ inputs.subproject }}
+          
