--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       run: docker run hello-world
       
     - name: Send JUNIT XML Files to Evergreen API
-      uses: ./.github/actions/send-junit-to-api.yml@develop
+      uses: ./.github/actions/send-junit-to-api@develop
       if: success() || failure() # always run even if the previous step fails
       with:
         subproject: ${{ inputs.subproject }}
