--- a/.github/actions/send-junit-to-api/action.yml
+++ b/.github/actions/send-junit-to-api/action.yml
@@ -1,29 +1,32 @@
+# .github/actions/send-junit-to-api/action.yml
 name: Send JUNIT XML Files to Evergreen API
+description: Sends JUNIT XML files to the Evergreen API.
 
+# Definice pro znovupoužití workflow
 on:
   workflow_call:
     inputs:
       subproject:
         description: "The subproject directory to navigate into."
         required: true
-      runs:
-      using: "composite"
-      steps:
-        - name: Send JUNIT XML Files to Evergreen API
-          shell: bash
-          run: |
-            echo "Workflow Run ID: ${{ github.run_id }}"
-            cd repository-group/${{ github.event.repository.name }}/${{ inputs.subproject }}/src/test/build/test-results/test/
-            for file in TEST-*.xml; do
-              if [ -f "$file" ]; then
-                echo "Sending $file to API"
-                # Odeslání souboru na API pomocí POST requestu s hlavičkou WorkflowRunID
-                curl -X POST \
-                  -H "WorkflowRunID: ${{ github.run_id }}" \
-                  -F "file=@$file" \
-                  http://evergreen66/api/junitupload.php
-              else
-                echo "No XML files found matching TEST-*.xml"
-              fi
-            done
-            
+
+# Definice kroků v rámci composite action
+runs:
+  using: "composite"
+  steps:
+    - name: Send JUNIT XML Files to Evergreen API
+      shell: bash
+      run: |
+        echo "Workflow Run ID: ${{ github.run_id }}"
+        cd repository-group/${{ github.event.repository.name }}/${{ inputs.subproject }}/src/test/build/test-results/test/
+        for file in TEST-*.xml; do
+          if [ -f "$file" ]; then
+            echo "Sending $file to API"
+            curl -X POST \
+              -H "WorkflowRunID: ${{ github.run_id }}" \
+              -F "file=@$file" \
+              http://evergreen66/api/junitupload.php
+          else
+            echo "No XML files found matching TEST-*.xml"
+          fi
+        done
