--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,11 +10,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4   
 
-    - name: Hello
-      run: echo Hello
-      
     - name: Send JUNIT XML Files to Evergreen API
-      uses: ./.github/actions/send-junit-to-api@develop
+      uses: ./.github/actions/send-junit-to-api/action
       if: success() || failure() # always run even if the previous step fails
       with:
         subproject: ${{ inputs.subproject }}
