--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/checkout@v4 
 
     - name: Send JUNIT XML Files to Evergreen API
-      uses: langer-jaroslav/ihmc-open-robotics-software/.github/actions/send-junit-to-api/action.yml@develop
+      uses: langer-jaroslav/ihmc-open-robotics-software/.github/actions/send-junit-to-api@develop
       if: success() || failure() # always run even if the previous step fails
       with:
         subproject: 'TEST'
