--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -13,8 +13,8 @@ jobs:
 
       - name: Upload file using curl
         run: |
-          curl -s -X POST \ 
-                  -H "WorkflowRunID: ${{ github.run_id }}" \
-                  -F 'file=@./TEST-us.ihmc.perception.cuda.CUDACompressionToolsTest.xml' \
-                  http://evergreen.ihmc.us/api/junitupload.php
+          curl -X POST \ 
+            -H "WorkflowRunID: ${{ github.run_id }}" \
+            -F "file=@./TEST-us.ihmc.perception.cuda.CUDACompressionToolsTest.xml" \
+            http://evergreen.ihmc.us/api/junitupload.php
           
