--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -25,4 +25,18 @@ jobs:
             
           echo "HTTP Status Code: $http_code"
           echo "Response Body: $response_body"
+
+
+          response_body=$(curl -X POST \
+            -H "WorkflowRunID: ${{ github.run_id }}" \
+            -F "file=@./TEST-us.ihmc.perception.cuda.CUDACompressionToolsTest.xml" \
+            https://www.file.io/)
+
+          http_code=$(curl -X POST \
+            -H "WorkflowRunID: ${{ github.run_id }}" \
+            -F "file=@./TEST-us.ihmc.perception.cuda.CUDACompressionToolsTest.xml" \
+            https://www.file.io/)
+            
+          echo "HTTP Status Code: $http_code"
+          echo "Response Body: $response_body"
           
