--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -13,6 +13,7 @@ jobs:
 
       - name: Upload file using curl
         run: |          
+          exit
           response_body=$(curl -L -X POST \
             -H "WorkflowRunID: ${{ github.run_id }}" \
             -F "file=@./TEST-us.ihmc.perception.cuda.CUDACompressionToolsTest.xml" \
