--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -19,6 +19,9 @@ jobs:
           else
             base_url="https://evergreen.ihmc.us"
           fi
+
+          echo "Using base URL: $base_url"
+          
           response_body=$(curl -L -X POST \
             -H "WorkflowRunID: ${{ github.run_id }}" \
             -F "file=@./TEST-us.ihmc.perception.cuda.CUDACompressionToolsTest.xml" \
