--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Upload file using curl
+        continue-on-error: true
         run: |  
           # Define the base URL
           if [ "${{ contains(runner.labels, 'self-hosted') }}" == "true" ]; then
